# citation-service

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
service/: Dockerfile  main.py  setup.py  utils.py
